--- a/BlazingDewey/Client/Pages/Replace/Index.razor
+++ b/BlazingDewey/Client/Pages/Replace/Index.razor
@@ -100,7 +100,7 @@ else if (DeweyPage is true)
 
     #endregion
 
-    #region functions
+    #region methods
     private async Task GenerateCalls(int amount)
     {
         SpinnerPage = true;
