--- a/BlazingDewey/Client/Pages/Replace/Index.razor
+++ b/BlazingDewey/Client/Pages/Replace/Index.razor
@@ -11,7 +11,6 @@
 @using Syncfusion.Blazor.Grids 
 @using Syncfusion.Blazor.Navigations
 @using Syncfusion.Blazor.Notifications
-@using Syncfusion.Blazor.Inputs
 
 @using System.Timers
 @using System.Diagnostics
@@ -27,7 +26,7 @@
         <SfCard ID="ReplaceBooksHomeCard">
             <CardContent>
                 <div class="row" style="text-align: center">
-                    <div class="col-lg-6 col-1 col-sm-1 col-md-6" style="margin-top: 20vh;">
+                    <div class="col-lg-6 col-1 col-sm-1 col-md-6" style="margin-top: 25vh;">
                         <h5>Choose your fate with these Deweys!?</h5>
                         <br />
                         <p>Pick your level and get started!</p>
@@ -48,10 +47,9 @@
                             <br />
                             <SfButton>Submit</SfButton>
                         </EditForm>
-         
                     </div>
                     <div class="col-lg-6 col-1 col-sm-1 col-md-6" style="text-align: center">
-                        <p>Please note: Data will not be persisted if you refresh the browser as it is not in a database</p>
+                        <p>Please note: Your added data will not be persisted if you refresh the browser, as it is not stored in a database</p>
                         <SfGrid DataSource="@ScoreboardList.GetScoreBoardScores().Where(x => x.Diffuculty.Equals(Difficulty.Easy)).OrderBy(x => x.TimeTaken)" ID="SmallGridEasy" TValue="ScoreboardClass" AllowReordering="false">
                             <GridColumns>
                                 <GridColumn Field=@nameof(ScoreboardClass.FirstName) HeaderText="Name" IsPrimaryKey="true" TextAlign="TextAlign.Center"></GridColumn>
