--- a/BlazingDewey/Client/Pages/Home/Index.razor
+++ b/BlazingDewey/Client/Pages/Home/Index.razor
@@ -7,42 +7,49 @@
 
 <div class="row">
     <div class="col-lg-4 col-md-12 col-sm-12">
-        <SfCard ID="HomeCard" Orientation="CardOrientation.Horizontal">
-            <CardContent>
-                <div>
-                    <div>
-                        Replacing Books
-                    </div>
-                    <br />
-                    <SfButton CssClass="float-right" OnClick="ReplaceBooks">View</SfButton>
-                </div>
-            </CardContent>
+        <SfCard ID="HomeCard" Orientation="CardOrientation.Vertical">
+            <img style="height: 630px; width: 100%; margin: 0px;" src="/images/replacement.jpg" />
+             
+                <CardHeader>Replacing Books</CardHeader>
+                <CardContent>
+                    <p>Drag and Drop the items in ascending order by using the tool on the left of every item in the grid!</p>
+                    <p>Once complete, click on submit your chosen order on the top left of the grid!</p>
+                </CardContent>
+                <CardFooter>
+                    <CardFooterContent>
+                        <SfButton CssClass="float-right" OnClick="ReplaceBooks">View</SfButton>
+                    </CardFooterContent>
+                </CardFooter>
         </SfCard>
     </div>
     <div class="col-lg-4 col-md-12 col-sm-12">
-        <SfCard ID="HomeCard" Orientation="CardOrientation.Horizontal">
+        <SfCard ID="HomeCard" Orientation="CardOrientation.Vertical">
+            <img style="height: 630px; width: 100%; margin: 0px;" src="/images/search.jpg" />
+            <CardHeader>Identify Areas</CardHeader>
             <CardContent>
-                <div>
-                    <div>
-                        Identify Areas
-                    </div>
-                    <br />
-                    <SfButton CssClass="float-right" Disabled="true">View</SfButton>
-                </div>
+                <p>Are you lost in the abundancness of all this information? You're in the right place.</p>
+                <p>Go here to identify areas and find what you're looking for.</p>
             </CardContent>
+            <CardFooter>
+                <CardFooterContent>
+                    <SfButton CssClass="float-right" Disabled="true">View</SfButton>
+                </CardFooterContent>
+            </CardFooter>
         </SfCard>
     </div>
     <div class="col-lg-4 col-md-12 col-sm-12">
-        <SfCard ID="HomeCard" Orientation="CardOrientation.Horizontal">
+        <SfCard ID="HomeCard" Orientation="CardOrientation.Vertical">
+            <img style="height: 630px; width: 100%; margin: 0px;" src="/images/callnumbers.jpg" />
+            <CardHeader>Finding Call Numbers</CardHeader>
             <CardContent>
-                <div>
-                    <div>
-                        Find Call Numbers
-                    </div>
-                    <br />
-                    <SfButton CssClass="float-right" Disabled="true">View</SfButton>
-                </div>
+                <p>Looking for specific call numbers? We've disabled this for now but,</p>
+                <p>you can go here to search the call numbers and find the areas they're associated with.</p>
             </CardContent>
+            <CardFooter>
+                <CardFooterContent>
+                    <SfButton CssClass="float-right" Disabled="true">View</SfButton>
+                </CardFooterContent>
+            </CardFooter>
         </SfCard>
     </div>
 </div>
@@ -50,7 +57,7 @@
     #HomeCard {
         min-height: 88vh;
         border-radius: 10px;
-        box-shadow: 1px 1px 2px #0094ff;
+        box-shadow: 1px 1px 2px #808080;
         margin: 1vh;
     }
 </style>
