--- a/BlazingDewey/Client/Pages/Home/Index.razor
+++ b/BlazingDewey/Client/Pages/Home/Index.razor
@@ -10,7 +10,7 @@
         <SfCard ID="HomeCard" Orientation="CardOrientation.Vertical">
             <img style="height: 630px; width: 100%; margin: 0px;" src="/images/replacement.jpg" />
              
-                <CardHeader>Replacing Books</CardHeader>
+                <CardHeader>Replacing Books (READ FOR INSTRUCTIONS)</CardHeader>
                 <CardContent>
                     <p>Drag and Drop the items in ascending order by using the tool on the left of every item in the grid!</p>
                     <p>Once complete, click on submit your chosen order on the top left of the grid!</p>
